--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "ion-tree-list": "~0.0.3",
     "ngCordova": "~0.1.23-alpha",
-    "ionic-toast": "~0.2.0"
+    "ionic-toast": "~0.2.0",
+    "font-awesome": "fontawesome#~4.4.0"
   }
 }
